# open-science-catalog-cataloguer

./: setup.cfg
osc_cataloguer/: build.py  cli.py  datacube.py  node.py  scraper.py  utils.py
