[metadata]
name = osc_cataloguer
author = Fabian Schindler
author_email = fabian.schindler@eox.at
description = Open Science Catalogue - Cataloguer
version = attr: osc_cataloguer.__version__
url = https://github.com/EOEPCA/open-science-catalog-cataloguer
keywords =
  OSC
  Open Science Catalogue
  STAC
# classifiers =
#   Development Status :: 4 - Beta
#   Intended Audience :: Science/Research
#   Programming Language :: Python :: 3
#   Topic :: Scientific/Engineering
license_files =
  LICENSE

[options]
# package_dir=
#   =osc_cataloguer
packages=find:
python_requires = >= 3.8
zip_safe = False
install_requires =


[options.entry_points]
console_scripts =
  osc = osc_cataloguer.cli:cli

[mypy]
ignore_missing_imports = True
